# iris

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  HELP.md  PRIVACY.md  README.md  TODO.md  iris-gui-README.md  iris-irix53.toml  iris-irix65.toml  iris.toml  profile.sh
.github/workflows/: appstore.yml  release.yml  rust.yml  sync-upstream.yml
backup/pipeline/: RESTORE.md
backup/pipeline/.github/workflows/: appstore.yml  release.yml
backup/pipeline/docs/: handoff-pipeline.md
backup/pipeline/installer/: iris-gui.entitlements
docs/: appstore-build.md  appstore-listing.md  handoff-pipeline.md  idle-pause-work.md  irix-6.5.22-install.md  irix-install.md
installer/: iris-gui-notarized.entitlements  iris-gui.iss
iris-gui/: Cargo.toml  iris-gui.desktop
iris-gui/assets/icons/: icon.icns
iris-gui/src/: config_ui.rs  framebuffer.rs  handle.rs  input.rs  macos_sandbox.rs  main.rs  scsi_menu.rs  settings.rs
rules/gui/: gui_mouse_integration.md
rules/irix/: cdrom-changer-eject-no-mediad-remount.md  indycam-end-to-end-capture.md  irix-install.md  miniroot-install-hang-scsi0-dma-irq-storm.md  vino-attach-stops-after-rev-id.md  vino-capture-on-6.5-progress.md  vino-gio-alias-offset.md
rules/jit/: macos-app-sandbox-kills-cranelift-jit-no-map_jit.md
rules/perf/: idle-pause-work.md
rules/snapshot/: per-device-saveloadsave-round-trip-is-the-regression-net.md  scratch-scsi-volume-sgi-vh-layout-and-irix-raw-device-gotchas.md
scripts/: add-transparency.sh  build-macos.sh  generate-icon.sh
src/: camera.rs  camera_nokhwa.rs  camera_v4l.rs  cdmc.rs  chd_disk.rs  chunk_store.rs  ci.rs  compositor.rs  config.rs  cow_disk.rs  debug_overlay.rs  decode_cache_profile.rs  devlog.rs  disp.rs  ds1x86.rs  eeprom_93c56.rs  gdb_stub.rs  hpc3.rs  hptimer_tests.rs  ioc.rs  iris_ci_main.rs  lib.rs  machine.rs  main.rs  mc.rs  mips_cache_v2.rs  mips_core.rs  mips_exec.rs  mips_exec_test.rs  mips_isa.rs  mips_tlb.rs  mips_tlb_test.rs  monitor.rs  net.rs  physical.rs  pit8254.rs  ps2.rs  registry.rs  rex3.rs  rex3_tests.rs  (+11 more)
src/jit/: dispatch.rs
src/rex3_jit/: compiler.rs  mod.rs  profile.rs
tools/: inst-watch.py
tools/tests/: prom-smoke.yaml  restore-smoke.yaml  screenshot-smoke.yaml
tools/vino/: chaindump.c  chainwalk.c  mempeek.c  vinodump.c  vinograb.c
