[package]
name = "iris"
version = "0.1.0"
edition = "2021"
default-run = "iris"

[features]
# Uncomment to enable cache debug tracking (tracks specific cache line across all operations)
debug_cache = []
developer = []
developer_ip7 = []  # CP0 Compare/timer calibration stats and debug prints
# Synthetic deterministic clock for CP0 Compare calibration: dt_ns derived from
# (instructions executed) * 10ns instead of host Instant::now(). Required for
# the snapshot determinism validator (Phase 3.3). Default OFF preserves the
# wallclock-anchored timer that interactive desktop builds expect.
ci_clock = []
# Lightning: pedal-to-the-metal build — disables breakpoint checks and traceback buffer updates.
# Incompatible with interactive debugging. For end-user / benchmarking builds only.
lightning = []
# O(1) TLB fast path: 512KB inline vmap indexed by VA[31:13] replaces linear scan
# for 32-bit and sign-extended 64-bit VAs. Always on; kept as a feature flag so
# downstream tooling that passes --features tlbvmap still compiles cleanly.
tlbvmap = []
# TLB translation statistics: per-AccessType counters for nanotlb, vmap, and
# MRU scan paths including entries-walked totals.  Print at emulator exit.
tlbstats = []
# R5000 CPU: 2-way set-associative 32KB L1I/L1D (32B lines), non-inclusive cache hierarchy.
# Switches PRID/FIR to R5000 values and selects 2-way L1 probe/fill paths.
r5k = []
# Secondary cache present. Without this flag the CPU reports SC=1 (no secondary cache)
# and the L2 is bypassed entirely. Use alone for external R4600SC-style cache sized via
# EEPROM, or together with r5ksc_triton for Triton on-die L2.
r5ksc = []
# Triton integrated L2: on-die 1MB/32B cache reported via CONFIG.SC=0, controlled via
# CONFIG.SE (bit 12 enable/disable), and sized via CONFIG.SS (bits 23:22).
# Implies r5ksc (Triton always has secondary cache present).
r5ksc_triton = ["r5ksc"]
default = ["tlbvmap"]
# Global Decode Cache: slab-backed hash table memoising decode_into() by raw instruction word.
# Both R4K (l2.instrs) and R5K (ic_instrs) store *const DecodedInstr pointers into the slab;
# the decoded: bool field is removed under this feature. Persistent across runs via
# ~/.iris/decode-cache.bin.
gdc = []
# Cranelift-based JIT compiler for MIPS → native translation.
jit = ["cranelift-codegen", "cranelift-frontend", "cranelift-jit", "cranelift-module", "cranelift-native", "target-lexicon"]
# Cranelift-based JIT compiler for REX3 graphics draw shaders.
rex-jit = ["cranelift-codegen", "cranelift-frontend", "cranelift-jit", "cranelift-module", "cranelift-native"]
# Use WindowEvent::CursorMoved for mouse motion instead of DeviceEvent::MouseMotion.
# Useful for testing absolute cursor position tracking. May cause doubled moves on some platforms.
mouseabs = []
# CHD disk image support (SCSI HDDs and CD-ROMs) via libchdman-rs.
# Off by default — enable with `cargo build --features chd`.
chd = ["dep:libchdman-rs"]
# Live host camera capture as the VINO video source (phase 3 of IndyCam
# emulation).  Uses nokhwa with AVFoundation on macOS.  Off by default —
# enable with `cargo build --features camera`.  First run on macOS will
# trigger the system camera permission dialog.
camera = ["dep:nokhwa"]

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
winit = "0.29"
glutin = "0.31"
glutin-winit = "0.4"
glow = "0.13"
raw-window-handle = "0.5"
rtrb = "0.3"
socket2 = { version = "0.5", features = ["all"] }
crossbeam-utils = "0.8"
bitfield = "0.14"
cpal = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "1.0.3"
postcard = { version = "1", features = ["alloc"] }
blake3 = "1"
png = "0.17"
parking_lot = "0.12"
spin = "0.10.0"
gdbstub = { version = "0.7", features = ["std"] }
gdbstub_arch = "0.3"
cranelift-codegen    = { version = "0.116", optional = true }
cranelift-frontend   = { version = "0.116", optional = true }
cranelift-jit        = { version = "0.116", optional = true }
cranelift-module     = { version = "0.116", optional = true }
cranelift-native     = { version = "0.116", optional = true }
target-lexicon       = { version = "0.13",  optional = true }
libchdman-rs = { version = "0.287.0-l7", features = ["prebuilt"], optional = true }
nokhwa       = { version = "0.10", features = ["input-avfoundation"], optional = true }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 1

# Developer profile: release optimizations + debug symbols. Default build target.
# Enables the "developer" feature flag for dev-only tooling.
# Usage: cargo build  (or explicitly: cargo build --profile developer)
[profile.developer]
inherits = "release"
debug = true
lto = "fat"
codegen-units = 1

# Profiling profile: release optimizations + full debug info for flamegraph/perf.
# Usage: cargo build --profile profiling && perf record ./target/profiling/iris
#        cargo flamegraph --profile profiling
[profile.profiling]
inherits = "release"
debug = 2
strip = false
force-frame-pointers = true

[[bin]]
name = "iris"
path = "src/main.rs"

[[bin]]
name = "coffdump"
path = "src/coffdump.rs"

[[bin]]
name = "iris-ci"
path = "src/iris_ci_main.rs"

[[bin]]
name = "chd_extract"
path = "src/bin/chd_extract.rs"
required-features = ["chd"]



