[package]
name = "iris-gui"
version = "0.1.0"
edition = "2021"

[features]
# Mac App Store distribution build. Activates sandbox-only behaviour: macOS
# security-scoped bookmarks (see src/macos_sandbox.rs) and hiding developer-only
# affordances. Unused outside the App Store build but kept here so the gated
# code compiles cleanly everywhere.
appstore = []

[dependencies]
# Group A (additive) features are always on for iris-gui so the user can
# enable them at runtime via the config UI: chd (.chd disk paths), camera
# (vino source), jit (IRIS_JIT toggle), rex-jit. They add code paths and
# native dependencies but no runtime cost when unused.
iris = { path = "..", features = ["chd", "camera", "jit", "rex-jit"] }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
crossbeam-channel = "0.5"
parking_lot = "0.12"
# Match iris's winit version — Ps2Controller::push_kb takes
# winit::keyboard::KeyCode.
winit = "0.29"
png = "0.17"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
log = "0.4"
env_logger = "0.10"

# macOS App Sandbox: NSURL security-scoped bookmarks let the App Store build
# reopen user-selected disk images / PROMs / ISOs across launches. These crates
# are already in the build graph (eframe/winit/rfd pull them in); we enable a
# few extra type features and use them only under `feature = "appstore"`.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSURL", "NSData", "NSError", "NSString", "NSArray",
] }

[[bin]]
name = "iris-gui"
path = "src/main.rs"
