[package]
name = "iris-gui"
version = "0.1.0"
edition = "2021"
description = "SGI Indy (MIPS R4400) emulator"
license = "BSD-3-Clause"

[package.metadata.deb]
maintainer = "Dani Sarfati <dani@funkervogt.com>"
copyright = "2025 Dani Sarfati"
license-file = "../LICENSE"
extended-description = "IRIS emulates an SGI Indy workstation (MIPS R4400) and boots IRIX 6.5 and 5.3 to a usable system with shell, networking, and X11."
depends = "$auto"
section = "games"
priority = "optional"
# Asset source paths are resolved relative to this package dir (iris-gui/),
# NOT the workspace root — so they must not carry an `iris-gui/` prefix or it
# doubles to iris-gui/iris-gui/... The `target/...` binary path is special-cased
# by cargo-deb (rewritten to target/<triple>/release with --target).
assets = [
  ["target/release/iris-gui", "usr/bin/iris-gui", "755"],
  ["assets/icons/icon-256.png", "usr/share/icons/hicolor/256x256/apps/iris-gui.png", "644"],
  ["assets/icons/icon-128.png", "usr/share/icons/hicolor/128x128/apps/iris-gui.png", "644"],
  ["assets/icons/icon-64.png", "usr/share/icons/hicolor/64x64/apps/iris-gui.png", "644"],
  ["iris-gui.desktop", "usr/share/applications/iris-gui.desktop", "644"],
]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/iris-gui", dest = "/usr/bin/iris-gui", mode = "755" },
  { source = "assets/icons/icon-256.png", dest = "/usr/share/icons/hicolor/256x256/apps/iris-gui.png", mode = "644" },
  { source = "iris-gui.desktop", dest = "/usr/share/applications/iris-gui.desktop", mode = "644" },
]

[features]
# Pre-compiled / distributed build. Hides developer-only affordances that don't
# make sense for users running an official binary — currently the iris.toml
# import/export menu items (the GUI's gui.json machine store is the system of
# record; iris.toml is only useful alongside the standalone `iris` CLI, i.e. a
# source checkout). Set by the Release and App Store workflows. A no-op for
# source builds, where the iris.toml workflow stays available.
bundled = []
# Mac App Store distribution build. Implies `bundled`, and additionally hides
# the CI/Automation config tab (the iris-ci socket is a developer automation
# feature unusable in the sandbox). Set by .github/workflows/appstore.yml.
appstore = ["bundled"]

[dependencies]
# Group A (additive) features are always on for iris-gui so the user can
# enable them at runtime via the config UI: chd (.chd disk paths), camera
# (vino source), jit (IRIS_JIT toggle), rex-jit. They add code paths and
# native dependencies but no runtime cost when unused.
iris = { path = "..", features = ["chd", "camera", "jit", "rex-jit"] }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
crossbeam-channel = "0.5"
parking_lot = "0.12"
# Match iris's winit version — Ps2Controller::push_kb takes
# winit::keyboard::KeyCode.
winit = "0.29"
png = "0.17"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
log = "0.4"
env_logger = "0.10"

# macOS App Sandbox: NSURL security-scoped bookmarks let the App Store build
# reopen user-selected disk images / PROMs / ISOs across launches. These crates
# are already in the build graph (eframe/winit/rfd pull them in); we enable a
# few extra type features and use them only under `feature = "appstore"`.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSURL", "NSData", "NSError", "NSString", "NSArray",
] }

[[bin]]
name = "iris-gui"
path = "src/main.rs"
